# TroveUp

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml
remotion/: package-lock.json  package.json
remotion/src/: Promo.tsx  Root.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs  mods.rs  settings.rs  tmod.rs  trovesaurus.rs
ui/: app.js  index.html  styles.css
