[package]
name = "troveup"
version = "1.0.2"
description = "TroveUp - easily install Trove modifications from the Trovesaurus mod repository (Tauri port of TroveTools.NET)"
authors = ["DouglasMarq", "Dazo (original TroveTools.NET)"]
license = "GPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "deflate", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
regex = "1"
dirs = "6"
chrono = "0.4"
open = "5"
rfd = "0.15"
arboard = "3"
urlencoding = "2"
html-escape = "0.2"
walkdir = "2"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
